# artwing-tui

./: .gitignore  PKGBUILD  PKGBUILD.rb  __builds.json  build.json  install.sh  pkgbuild.rb  pkgbuild.sh  pyproject.sh  pyproject.toml  qproject.sh  readme.md  tconfig.tcss
Asset/: ed25519  ed25519.pub
Backend/: build.py  builds.py  model.py  models.py  script.py  scripts.py  style.tcss
Fontend/: build.json  model.json
Formula/: artwing-tui.rb  artwing-tui.sh  build.rb  filterx-tui.rb  filterx-tui.sh  tap.rb
artwing/: init.py
artwing/Backend/: build.py  builds.py  model.py  models.py  script.py  style.tcss
backend/: .__effect.py
filterx/: init.py
filterx/Backend/: model.py
frontend/: ._model.html  ._model.js  ._script.js  ._style.css
