[project]
version = "0.0.2"
name = "filterx-tui"
description = "filterx gmic"
license = { file = "LICENSE" }
authors = [{ name = "Andri Berger" }]
requires-python = ">=3.14"
dependencies = [
    "platformdirs",
    "imagesize",
    "textual",
    "textual-image"]

[dependency-groups]
dev = [
    "ruff",
    "textual-dev"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["filterx"]

[project.scripts]
filterx-tui ="filterx.init:init"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff]
line-length = 50
target-version = "py314"
