[project]
version = "0.0.2"
name = "artwing-tui"
description = "artwing gmic"
license = { file = "LICENSE" }
authors = [{ name = "Andri Berger" }]
requires-python = ">=3.14"
dependencies = [
    "platformdirs",
    "imagesize",
    "textual",
    "textual-image"]

[dependency-groups]
dev = [
    "ruff",
    "textual-dev"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["artwing"]

[project.scripts]
artwing-tui ="artwing.init:init"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff]
line-length = 50
target-version = "py314"
